<resources>
    <string name="app_name">City ExplorerChallenge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="challenge_details">Challenge Details</string>
    <string name="city_explorer_challenge">City Explorer Challenge</string>
    <string name="join_adventure">Join the Adventure</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_prompt">Don\'t have an account? Register</string>
    <string name="random_challenge">Random Challenge</string>
    <string name="choose_adventure">Choose new challenge</string>
    <string name="active_challenge">Active Challenge</string>
    <string name="no_active_challenge_yet">No active challenge yet</string>
    <string name="open_map">Open Map</string>
</resources>